Added resources and styling to html document

--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
 	<title>Excursion</title>
 	<link href="resources/css/style.css" style="text/css" rel="stylesheet">
 </head>
-<body class ="background">
+
+<body bgcolor="black" class="background">
 	<div>
-		<h1 class="heading">Discover Hiddden Places in the World Around You</h1>
+		<h1 id="heading">Discover Hiddden Places in the World Around You</h1>
 	</div>
+	<div>
+		<h3 class="sub-heading"><a href="#">Download Excursion (Coming Soon!)</a></h3>
+	</div>
+
+	<div>
+	
+		<video src="resources/videos/excursion.mp4" autoplay loop>
+			<p>Video not supported by browser</p>
+		</video>
+	</div>
+
+	<div>
+		<h1 class="subject-heading"> Your Personal Travel Guide</h1>
+		<p id="gray-subject">Excursion remembers places you like, and recommends new points of interest around you.</p>
+		<img src="resources/images/camp.jpg">
+	</div>
+
+	<div id="icon">
+		<img src="resources/images/phone.png">
+	</div>
+
+	<div>
+		<h1 class="subject-heading">Coming Soon for iPhone and Android</h1>	
+		<h3 class="sub-heading"><a href="#">Download Excursion (Coming Soon!)</a></h3>
+	</div>
+
+	<div>
+		<footer id="footer"><h2>&copy Excursion</h2></footer>
+	</div>
+
 </body>
+
 </html>
