--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Excursion</title>
 	<link href="resources/css/style.css" style="text/css" rel="stylesheet">
@@ -8,7 +9,6 @@
 <!-- background class ensures website has black background throughout and text is centered with white font color-->
 <body class="background">
 	<div>
-
 		<h1 id="heading">Discover Hiddden Places in the World Around You</h1>
 	</div>
 
@@ -27,13 +27,12 @@
 
 	<div>
 		<h1 class="subject-heading"> Your Personal Travel Guide</h1>
-
 		<!-- used an id here for Specificity due to the background class defaulting text to white-->
 		<p id="gray-subject">Excursion remembers places you like, and recommends new points of interest around you.</p>
 		<img src="resources/images/camp.jpg">
 	</div>
 
-	<!-- displays icon png image added padding to replicate redline mock-->
+	<!-- displays icon png image, added padding to replicate redline mock-->
 	<div id="icon">
 		<img src="resources/images/phone.png">
 	</div>
